--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <link
       rel="icon"
-      type="image/svg+xml"
-      href="/logo.svg"
+      href="/img/logo.png"
     />
     <meta
       name="viewport"
@@ -17,7 +16,7 @@
     <div id="root"></div>
     <script
       type="module"
-      src="/src/main.tsx"
+      src="/src/index.tsx"
     ></script>
   </body>
 </html>
