--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link
       rel="icon"
-      href="/img/logo.png"
+      href="/images/logo.png"
     />
     <meta
       name="viewport"
